clang/test/BSC/Negative/OwnedStruct/redefinition/owned-struct-redefinition.cbs
// RUN: %clang_cc1 -verify %s


owned struct A {}; // expected-note {{previous definition is here}}
owned struct A {}; // expected-error {{redefinition of 'A'}}

owned struct B {}; // expected-note {{previous definition is here}}
struct B {}; // expected-error {{redefinition of 'B'}}

owned struct C {}; // expected-note {{previous use is here}}
enum C { D }; // expected-error {{use of 'C' with tag type that does not match previous declaration}}

owned struct E {}; // expected-note {{previous definition is here}}
// expected-note@-1 {{previous use is here}}
union E {}; // expected-error {{redefinition of 'E'}}
// expected-error@-1 {{use of 'E' with tag type that does not match previous declaration}}

owned struct F {}; // expected-note {{previous use is here}}
trait F {}; // expected-error {{use of 'F' with tag type that does not match previous declaration}}